# apecs-playground

./: apecs-playground.cabal
shmup-gloss/: Main.hs
