cabal-version: 2.2

name: apecs-playground
version: 0
build-type: Simple

common language
  default-language: Haskell2010
  build-depends: base

executable shmup-gloss
  import: language
  build-depends:
    apecs,
    apecs-gloss,
    gloss,
    linear,
    random,
  hs-source-dirs: shmup-gloss
  main-is: Main.hs
